--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,9 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "start": "concurrently \"cd ../backend && node dosis.js\" \"vue-cli-service serve\"",
-    "test:e2e": "vue-cli-service test:e2e",
-    "test:unit": "vue-cli-service test:unit"
+    "test": "npm run test:unit",
+    "test:unit": "vue-cli-service test:unit  --watch --verbose=false || true",
+    "test:e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
     "axios": "^0.18.0",
