--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.18.0",
     "concurrently": "^4.1.0",
     "material-design-icons-iconfont": "^3.0.3",
+    "normalizr": "^3.3.0",
     "nouislider": "^13.1.0",
     "register-service-worker": "^1.5.2",
     "roboto-fontface": "*",
