adds express server to serve dist folder

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
     "material-design-icons-iconfont": "^3.0.3",
     "normalizr": "^3.3.0",
     "nouislider": "^13.1.0",
