--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "NODE_ENV='la_warehouse' vue-cli-service serve",
+    "serve:offsite": "FOO='bar' vue-cli-service serve", 
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "start": "concurrently \"cd ../backend && node dosis.js\" \"vue-cli-service serve\"",
-    "test": "npm run test:unit",
+    "test": "yarn test:unit",
     "test:unit": "vue-cli-service test:unit  --watch --verbose=false || true",
     "test:e2e": "vue-cli-service test:e2e"
   },
