--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "serve:offsite": "vue-cli-service serve --mode offsite", 
+   "serve:offsite": "vue-cli-service serve --mode offsite", 
     "build": "vue-cli-service build",
     "build:offsite": "vue-cli-service build --mode offsite",
     "lint": "vue-cli-service lint",
@@ -24,8 +24,11 @@
     "nouislider": "^13.1.0",
     "register-service-worker": "^1.5.2",
     "roboto-fontface": "*",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
     "vue": "^2.5.22",
     "vue-router": "^3.0.1",
+    "vue-socket.io": "^3.0.7",
     "vuetify": "^1.3.0",
     "vuex": "^3.0.1"
   },
