--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,15 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-   "serve": "vue-cli-service serve",
-   "serve:offsite": "vue-cli-service serve --mode offsite", 
-    "build": "vue-cli-service build",
-    "build:offsite": "vue-cli-service build --mode offsite",
+    "serve": " copyBackendConfig && vue-cli-service serve",
+    "serve:offsite": " copyBackendConfig && vue-cli-service serve --mode offsite",
+    "build": " copyBackendConfig && vue-cli-service build",
+    "build:offsite": " copyBackendConfig && vue-cli-service build --mode offsite",
     "lint": "vue-cli-service lint",
-    "start": "concurrently \"cd ../backend && node dosis.js\" \"vue-cli-service serve\"",
+    "start": "concurrently \"cd ../backend && node server.js\" \"vue-cli-service serve\"",
     "test": "yarn test:unit",
     "test:unit": "vue-cli-service test:unit --watch --verbose=false || true",
-    "test:e2e": "vue-cli-service test:e2e"
+    "test:e2e": "vue-cli-service test:e2e",
+    "copyBackendConfig": "node scripts/copyConfig"
   },
   "dependencies": {
     "axios": "^0.18.0",
